# pyterm

./: .gitignore  pyproject.toml  readme.md
pyterm/: __init__.py  terminal.py
tests/: test_term.py
